# AI-Agent-Control-Center

./: .gitignore  AGENTS.md  AI-Agent-Control-Center-Specification.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KNOWN_LIMITATIONS.md  KNOWN_LIMITATIONS.zh-CN.md  LICENSE  NOTICE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adapter-development.en.md  adapter-development.md  macos-integration-checklist.md  macos-integration-checklist.zh-CN.md  product-design.md  product-design.zh-CN.md  test-report-1.3.0-rc.2.en.md  test-report-1.3.0-rc.2.md  test-report-1.3.1.en.md  test-report-1.3.1.md  test-report.en.md  test-report.md  troubleshooting.en.md  troubleshooting.md  user-guide.en.md  user-guide.md
examples/: config.example.yaml
scripts/: build_app.sh  build_dmg.sh  capture_panel_screenshot.py  install.sh  release_env.sh  start.sh  uninstall.sh
tests/: conftest.py  test_accessibility.py  test_adapters.py  test_api.py  test_app.py  test_automation.py  test_automation_executor.py  test_cli.py  test_codex_discovery.py  test_config.py  test_discovery_service.py  test_gui.py  test_gui_quota_wiring.py  test_gui_usage.py  test_hotkeys.py  test_instance_guard.py  test_kimi_desktop_discovery.py  test_kimi_discovery.py  test_kimi_metrics.py  test_kimi_oauth.py  test_kimi_quota.py  test_kimi_wire_usage.py  test_models.py  test_packaging.py  test_persistence.py  test_processes.py  test_quota_bar.py  test_quota_service.py  test_run_wrapper.py  test_security.py  test_state_machine.py  test_task_manager.py
(+63 files in other folders)
