[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "aacc-control-center"
version = "1.3.0rc1"
description = "AI Agent Control Center for macOS"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "psutil>=7,<8",
  "pydantic>=2.11,<3",
  "pyside6>=6.9,<7",
  "pyobjc-framework-quartz>=11,<13; sys_platform == 'darwin'",
  "pyyaml>=6,<7",
  "regex>=2025,<2027",
  "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.17,<2",
  "pyinstaller>=6.14,<7",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<8",
  "pytest-qt>=4.5,<5",
  "ruff>=0.12,<1",
  "types-pyyaml>=6.0,<7",
  "types-psutil>=7,<8",
  "types-regex>=2025,<2027",
]

[project.scripts]
aacc = "aacc.cli:main"
aacc-run = "aacc.run_wrapper:main"
aacc-gui = "aacc.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aacc"]

[tool.hatch.build.targets.wheel.force-include]
"src/aacc/styles.qss" = "aacc/styles.qss"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = ["ignore:Using .*starlette\\.testclient.*"]
markers = ["integration: requires a real macOS desktop session"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["aacc"]
mypy_path = "src"
